--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="React Complete Guide"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/expense.png" />
+    <link rel="apple-touch-icon" href="./expense.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Expense Tracker</title>
   </head>
